# discord-music-bot

./: .env  .env.sample  .env.test  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  runner.py  sample.env
app/: main.py
app/cogs/: music.py
app/configs/: environment.py
bot/: core.py  music.py
src/: config.py  configs.py  core.py  main.py  models.py
src/cogs/: __init__.py  music.py
